Drop required Java Version from 11 to 8